# autumn

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  README.md  RELEASE_NOTES.md  STABILITY.md  bench  bench.rs  benches.rs  clean_telemetry.py  clean_telemetry2.py  clean_telemetry3.py  clean_telemetry4.py  cliff.toml  clippy_output.txt  codecov.yml  commit_description.txt  commit_message.md  commit_push.py  doc_output_final.txt  dx_audit.md  dx_audit_report.md  eris_advisories.md  example.txt  execute_local_job.txt  find_undocumented.py  find_undocumented2.py  find_undocumented_harvest.py  fix_app_docs.patch  fix_clippy.sh  fix_clippy2.sh  fix_clippy3.sh  fix_clippy4.sh  fix_clippy5.sh  fix_dev.py  fix_docs.py  (+108 more)
autumn/: Cargo.toml  default_6912848171723358023_0_135150.profraw  default_6912848171723358023_0_135165.profraw  default_6912848171723358023_0_135238.profraw  default_6912848171723358023_0_135281.profraw  test_percent
autumn-admin-plugin/: Cargo.toml  README.md
autumn-admin-plugin/src/: admin.js  auth.rs  experiments.rs  feature_flags.rs  lib.rs  registry.rs  routes.rs  templates.rs  tokens.css  tokens.rs  traits.rs
autumn-admin-plugin/tests/: token_admin_db.rs
autumn-cache-redis/: Cargo.toml  README.md
autumn-cache-redis/src/: lib.rs
autumn-cli/: Cargo.toml  build.rs
autumn-cli/src/: assets.rs  build.rs  canary.rs  check.rs  cold_start_driver.rs  config.rs  credentials.rs  data.rs  db.rs  db_pull.rs  dev.rs  dev_loop_bench.rs  dev_loop_scaling.rs  doctor.rs  experiments.rs  explore.rs  export.rs  flags.rs  http.rs  load.rs  mail.rs  main.rs  maintenance.rs  migrate.rs  monitor.rs  monitor.rs.patch  new.rs  openapi.rs  paths.rs  plugin_check.rs  process.rs  release.rs  routes.rs  scaling_driver.rs  seed.rs  serve.rs  setup.rs  shard.rs  simulate.rs  task.rs  (+4 more)
autumn-cli/test-app2/: Cargo.toml  autumn.toml
autumn-cli/tests/: cloud_native_scaffold.rs  db.rs  db_pull.rs  e2e.rs  generate.rs  migrate_down.rs  repo_hygiene.rs  serve.rs  webhook_sim.rs
autumn-feature-flag-plugin/: Cargo.toml
autumn-feature-flag-plugin/src/: admin.rs  lib.rs  routes.rs
autumn-harvest/: CLAUDE.md  Cargo.toml  clippy.toml
autumn-harvest/autumn-harvest/: Cargo.toml
autumn-harvest/autumn-harvest-autumn/: Cargo.toml
autumn-harvest/autumn-harvest-macros/: Cargo.toml
autumn-harvest/autumn-harvest-plugin/: Cargo.toml
autumn-harvest/autumn-web-harvest/: Cargo.toml
autumn-macros/: Cargo.toml
autumn-macros/src/: actions_macro.rs  api_doc.rs  authorize.rs  cached.rs  collect.rs  event.rs  feature_flag.rs  i18n.rs  idempotency_guard.rs  inbound_mail.rs  island.rs  islands_macro.rs  job.rs  jobs_macro.rs  lib.rs  listener.rs  listeners_macro.rs  mail_previews_macro.rs  mailer.rs  mailer_macro.rs  mailer_preview.rs  main_macro.rs  model.rs  oauth2_callback.rs  one_off_task.rs  one_off_tasks_macro.rs  param_helpers.rs  parse.rs  paths_macro.rs  repository.rs  route.rs  route.rs.orig  routes_macro.rs  routes_macro.rs.orig  scheduled.rs  secured.rs  server_action.rs  service.rs  static_route.rs  static_routes_macro.rs  (+3 more)
autumn-monitor-plugin/: Cargo.toml
autumn-monitor-plugin/src/: lib.rs
autumn-openapi-plugin/: Cargo.toml
autumn-openapi-plugin/src/: lib.rs
autumn-plugin-spa/: Cargo.toml
autumn-plugin-spa/src/: lib.rs
autumn-plugin-sppl/: Cargo.toml
autumn-plugin-sppl/src/: lib.rs
autumn-storage-s3/: Cargo.toml  README.md
autumn-storage-s3/src/: lib.rs
autumn-wasm/: Cargo.toml
autumn-wasm/src/: action.rs  boot.rs  compose.rs  island.rs  lib.rs  prelude.rs  signal.rs
autumn-wasm/tests/: wasm_smoke.rs
autumn/benches/: attribute_encryption.rs  inspector.rs  version_history.rs
autumn/proptest-regressions/: actuator.txt  task.txt
autumn/src/: actuator.rs  app.rs  app.rs.rej  assets.rs  audit.rs  auth.rs  authorization.rs  cache.rs  canary.rs  channels.rs  chaos.rs  circuit_breaker.rs  config.rs  credentials.rs  csv.rs  db.rs  db_test.rs  diagnostics.rs  encryption.rs  error.rs  etag.rs  events.rs  experiments.rs  extract.rs  feature_flag.rs  feature_flags.rs  flash.rs  flash.rs.orig  form.rs  gdpr.rs  health.rs  hooks.rs  htmx.rs  http_client.rs  i18n.rs  idempotency.rs  inbound_mail.rs  inspector.rs  interceptor.rs  job.rs  (+57 more)
autumn/templates/: build.rs.template
autumn/tests/: access_log.rs  after_commit_integration.rs  api_versioning_integration.rs  api_versioning_openapi.rs  api_versioning_unit.rs  app_builder.rs  authorization_integration.rs  auto_broadcast.rs  bot_protection_pipeline.rs  boundary_hooks_integration.rs  cache_global_integration.rs  cached_global_backend.rs  chaos_api_token_concurrency.rs  chaos_api_token_store_fuzz.rs  chaos_api_token_store_loom.rs  chaos_api_token_store_loom_delete.rs  chaos_api_token_store_loom_verify.rs  chaos_app_state_fuzz.rs  chaos_authorization_poison.rs  chaos_channels.rs  chaos_channels_concurrent_loom.rs  chaos_channels_loom.rs  chaos_channels_proptest.rs  chaos_channels_subscribe_loom.rs  chaos_circuit_breaker_deadlock_loom.rs  chaos_circuit_breaker_registry_deadlock2_loom.rs  chaos_fuzz_config.rs  chaos_fuzz_db.rs  chaos_global_cache_loom.rs  chaos_idempotency.rs  chaos_idempotency_fuzz.proptest-regressions  chaos_idempotency_fuzz.rs  chaos_idempotency_proptest.proptest-regressions  chaos_idempotency_proptest.rs  chaos_idempotency_store_deadlock.rs  chaos_idempotency_store_deadlock2.rs  chaos_idempotency_store_loom.rs  chaos_idempotency_store_panic.rs  chaos_idempotency_store_panic_loom.rs  chaos_idempotency_ttl_panic.rs  (+119 more)
example-e2e/: Cargo.toml
example-e2e/src/: lib.rs
examples/api-tokens/: Cargo.toml  README.md
examples/avatars/: Cargo.toml  autumn.toml
examples/blog/: .gitignore  Cargo.toml  README.md  autumn.toml  build.rs  docker-compose.yml
examples/bookmarks-distributed/: .env.example  Cargo.toml  Dockerfile  README.md  autumn-dev.toml  autumn-docker.toml  autumn.toml  build.rs  build_support.rs  docker-compose.yml  tailwind.config.js
poc_cargo/: Cargo.toml
scratch_proj/: .dockerignore  Cargo.toml  Dockerfile  autumn.toml  build.rs
(+1083 files in other folders)
