[workspace]
members = ["autumn", "autumn-macros", "autumn-cli", "autumn-admin-plugin", "examples/hello", "examples/todo-app", "examples/blog", "examples/bookmarks", "examples/bookmarks-distributed", "examples/wiki", "examples/reddit-clone", "examples/custom_config_loader", "examples/ws-echo", "examples/api-tokens"]
resolver = "3"

[patch.crates-io]
autumn-web = { path = "autumn" }

[workspace.package]
edition = "2024"
rust-version = "1.88.0"
version = "0.3.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/madmax983/autumn"

[workspace.dependencies]
# Runtime
axum = { version = "0.8", features = ["macros", "ws"] }
tokio-util = "0.7"
diesel = { version = "2", features = ["sqlite"] }
pq-sys = { version = "0.7", features = ["bundled_without_openssl"] }
diesel-async = { version = "0.8", features = ["deadpool", "postgres"] }
diesel_migrations = "2"
http = "1"
libsqlite3-sys = { version = "0.36", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
maud = { version = "0.27", features = ["axum"] }
toml = "1.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.32.1"
opentelemetry = { version = "0.31.0", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["trace", "grpc-tonic", "http-proto", "reqwest-client"] }
redis = { version = "1.2.0", default-features = false, features = ["aio", "tokio-comp", "connection-manager"] }
tokio-cron-scheduler = { version = "0.15", features = ["signal"] }
chrono-tz = "0.10"
validator = { version = "0.20", features = ["derive"] }
bcrypt = "0.19"
futures = "0.3"
indexmap = "2"
moka = { version = "0.12", features = ["sync"] }
chrono = { version = "0.4", features = ["serde"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres", "redis"] }
# Pin time to a range that is compatible with MSRV 1.86.0. Without this,
# bollard (pulled in by testcontainers dev/optional deps) resolves
# bollard-stubs -> time@0.3.46+ which requires rustc 1.88.0.
time = { version = ">=0.3, <0.4" }

# Proc macro
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
