[package]
name = "autumn-admin-plugin"
description = "Out-of-the-box admin panel plugin for autumn-web applications"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/madmax983/autumn"
readme = "README.md"
keywords = ["web", "admin", "axum", "htmx", "fullstack"]
categories = ["web-programming", "web-programming::http-server"]

[dependencies]
autumn-web = { version = "0.5.0", path = "../autumn", features = ["maud", "htmx", "db", "flash", "multipart"] }
axum = { workspace = true, features = ["multipart"] }
csv = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
form_urlencoded = "1"
futures = { workspace = true }
http = { workspace = true }
maud = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
diesel = { workspace = true }
diesel-async = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
tower = { workspace = true, features = ["util"] }

[lints]
workspace = true
