[package]
name = "autumn-cache-redis"
description = "Redis-backed shared cache plugin for autumn-web applications"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/madmax983/autumn"
readme = "README.md"
keywords = ["web", "redis", "cache", "axum", "fullstack"]
categories = ["web-programming", "web-programming::http-server"]

[dependencies]
autumn-web = { version = "0.6.0", path = "../autumn", features = ["redis"] }
redis = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = "1"

[dev-dependencies]
tokio = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tower = { workspace = true, features = ["util"] }

[lints]
workspace = true
