[package]
name = "autumn-cli"
description = "CLI tool for the Autumn web framework"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/madmax983/autumn"
readme = "../README.md"
keywords = ["web", "composable", "axum", "htmx", "fullstack"]
categories = ["web-programming", "web-programming::http-server"]

[[bin]]
name = "autumn"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
ctrlc = "3.5.2"
getrandom = "0.3"
hex = "0.4"
indicatif = "0.18"
notify = "8"
notify-debouncer-mini = "0.7"
ratatui = "0.30"
reqwest = { version = "0.13", features = ["blocking", "json", "rustls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
toml = "1.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.31.2", features = ["fs", "signal"] }

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.13", features = ["blocking", "rustls"], default-features = false }
proptest = "1.4"
temp-env = { version = "0.3.6", features = ["async_closure"] }

[lints]
workspace = true
