[package]
name = "autumn-cli"
description = "CLI tool for the Autumn web framework"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/madmax983/autumn"
readme = "../README.md"
keywords = ["web", "composable", "axum", "htmx", "fullstack"]
categories = ["web-programming", "web-programming::http-server"]

[[bin]]
name = "autumn"
path = "src/main.rs"

[dependencies]
autumn-web = { version = "0.5.0", path = "../autumn", default-features = false, features = [
    "db", "htmx", "maud", "mail", "storage", "i18n", "telemetry-otlp", "redis", "cache-moka", "http-client", "reporting"
] }
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
diesel = { workspace = true }
crossterm = "0.29"
ctrlc = "3.5.2"
getrandom = "0.4"
hex = "0.4"
hmac = "0.12"
include_dir = "0.7"
indicatif = "0.18"
notify = "8"
notify-debouncer-mini = "0.7"
ratatui = "0.30"
reqwest = { version = "0.13", features = ["blocking", "json", "rustls", "multipart", "cookies"], default-features = false }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
syn = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
url = "2.5.8"

tempfile = "3"
directories = "6.0.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.31.2", features = ["fs", "signal", "socket", "user"] }

[dev-dependencies]
reqwest = { version = "0.13", features = ["blocking", "rustls"], default-features = false }
proptest = "1.4"
temp-env = { version = "0.3.6", features = ["async_closure"] }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
