[package]
name = "autumn-feature-flag-plugin"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
maud.workspace = true
autumn-web = { version = "0.4.0", path = "../autumn", features = ["ws", "maud"] }
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true


[lints]
workspace = true
