[workspace]
members = ["autumn-harvest", "autumn-harvest-macros"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.86.0"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/madmax983/autumn-harvest"

[workspace.dependencies]
# Core
autumn-web = { path = "../autumn" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
futures = "0.3"

# Database
diesel = { version = "2", features = ["postgres", "uuid", "chrono", "serde_json"] }
diesel-async = { version = "0.8", features = ["deadpool", "postgres"] }
deadpool = "0.12"

# Proc macro
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
