[workspace]
members = ["autumn-harvest", "autumn-web-harvest", "autumn-harvest-macros"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.86.0"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/madmax983/autumn-harvest"

[workspace.dependencies]
# Core
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
futures = "0.3"

# Database
diesel = { version = "2.3", features = ["postgres_backend", "uuid", "chrono", "serde_json"] }
diesel-async = { version = "0.8", features = ["deadpool", "postgres"] }
diesel_migrations = "2"
deadpool = "0.13"

# Proc macro
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# Dev / test
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
