[package]
name = "autumn-macros"
description = "Proc macros for the Autumn web framework"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/madmax983/autumn"
readme = "../README.md"
keywords = ["web", "composable", "axum", "htmx", "fullstack"]
categories = ["web-programming", "web-programming::http-server"]

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true

[lints]
workspace = true
