[package]
name = "autumn-plugin-spa"
description = "Embed and serve a pre-built SPA (Vite, SvelteKit, Astro, …) from an autumn-web application"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/madmax983/autumn"
readme = "README.md"
keywords = ["web", "spa", "static", "axum", "fullstack"]
categories = ["web-programming", "web-programming::http-server"]

[dependencies]
autumn-web = { version = "0.4.0", path = "../autumn" }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"
flate2 = "1"
axum = { workspace = true }
http = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
