[package]
name = "autumn-storage-s3"
description = "S3-compatible blob storage plugin for autumn-web applications"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/madmax983/autumn"
readme = "README.md"
keywords = ["web", "s3", "storage", "axum", "fullstack"]
categories = ["web-programming", "web-programming::http-server"]

[dependencies]
autumn-web = { version = "0.5.0", path = "../autumn", features = ["storage"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
aws-runtime = ">=1, <1.7"
# aws-smithy-types 1.5 moved DeferredSignerSender behind a generic send(),
# which breaks type inference in every published aws-runtime release
# (E0282 in its sigv4 signer). Without this constraint any fresh
# resolution of this crate fails to compile — `cargo add autumn-storage-s3`
# included, not just cargo-semver-checks' isolated CI builds. Constrain to
# the known-good series until upstream ships an aws-runtime compatible
# with smithy-types 1.5.
aws-smithy-types = ">=1.4, <1.5"
# time 0.3.48 breaks trait coherence (E0119) in aws-smithy-types 1.4.x's
# blanket From impl; time is already in this crate's graph via the aws
# crates, so this only bounds resolution. Lift once upstream releases
# are compatible.
time = { version = ">=0.3.36, <0.3.48", default-features = false }
aws-sdk-s3 = "1.121.0"
bytes = "1"
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
temp-env = { version = "0.3.6", features = ["async_closure"] }
tokio = { workspace = true }

[lints]
workspace = true
