[package]
name = "autumn-wasm"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM runtime helpers for Autumn islands"

[dependencies]
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "Window", "Element", "HtmlElement", "Node", "EventTarget"] }

[lints]
workspace = true
