[package]
name = "autumn-web"
description = "An opinionated, convention-over-configuration web framework for Rust"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/madmax983/autumn"
readme = "../README.md"
keywords = ["web", "composable", "axum", "htmx", "fullstack"]
categories = ["web-programming", "web-programming::http-server"]

[features]
default = ["maud", "htmx", "tailwind", "db", "cache-moka"]
ws = ["dep:tokio-stream"]
flash = []
cache-moka = ["dep:moka"]
maud = ["dep:maud"]
htmx = []
tailwind = []
db = [
    "dep:deadpool",
    "dep:diesel",
    "dep:diesel-async",
    "dep:diesel_migrations",
    "dep:libsqlite3-sys",
    "dep:pq-sys",
    "diesel/postgres",
]
test-support = ["dep:testcontainers", "dep:testcontainers-modules"]
telemetry-otlp = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]
redis = ["dep:redis"]

[dependencies]
autumn-macros = { version = "0.2.0", path = "../autumn-macros" }
axum.workspace = true
bytes = "1"
http-body-util = "0.1"
bcrypt.workspace = true
deadpool = { version = "0.13", default-features = false, features = ["managed", "rt_tokio_1"], optional = true }
diesel = { workspace = true, optional = true }
pq-sys = { workspace = true, optional = true }
diesel-async = { workspace = true, optional = true }
diesel_migrations = { workspace = true, optional = true }
futures.workspace = true
http.workspace = true
indexmap.workspace = true
libsqlite3-sys = { workspace = true, optional = true }
maud = { workspace = true, optional = true }
moka = { workspace = true, optional = true }
pin-project-lite = "0.2"
serde.workspace = true
serde_json = "1"
thiserror.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true, optional = true }
tokio-util.workspace = true
toml.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
redis = { workspace = true, optional = true }
tokio-cron-scheduler.workspace = true
validator.workspace = true
uuid = { version = "1", features = ["v4"] }
chrono = { workspace = true }
chrono-tz.workspace = true
testcontainers = { workspace = true, optional = true }
testcontainers-modules = { workspace = true, optional = true }
subtle = "2.6.1"
url = "2.5.8"

[dev-dependencies]
diesel = { version = "2", features = ["chrono"] }
filetime = "0.2"
http.workspace = true
serde_json = "1"
tempfile = "3"
tokio.workspace = true
tower = { workspace = true, features = ["timeout", "util"] }
trybuild = "1"
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
redis.workspace = true
proptest = "1.4"
tokio-tungstenite = "0.29.0"
loom = "0.7.2"
temp-env = { version = "0.3.6", features = ["async_closure"] }
rustversion = "1"

[lints]
workspace = true
