[package]
name = "autumn-web"
description = "An opinionated, convention-over-configuration web framework for Rust"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/madmax983/autumn"
readme = "../README.md"
keywords = ["web", "composable", "axum", "htmx", "fullstack"]
categories = ["web-programming", "web-programming::http-server"]

[features]
default = ["maud", "htmx", "tailwind", "db", "cache-moka", "http-client", "reporting"]
ws = ["dep:tokio-stream"]
presence = ["ws"]
flash = []
cache-moka = ["dep:moka"]
maud = ["dep:maud"]
htmx = []
multipart = ["axum/multipart"]
tailwind = []
http-client = ["dep:reqwest"]
oauth2 = ["http-client"]
webauthn = ["dep:webauthn-rs"]
openapi = ["dep:serde_yaml"]
# Optional Markdown rendering with frontmatter parsing and SSG integration.
markdown = ["dep:pulldown-cmark"]
db = [
    "dep:deadpool",
    "dep:diesel",
    "dep:diesel-async",
    "dep:diesel_migrations",
    "dep:libsqlite3-sys",
    "dep:pq-sys",
    "dep:scoped-futures",
    "dep:tokio-postgres",
    "diesel/postgres",
    "diesel/chrono",
]
test-support = ["dep:testcontainers", "dep:testcontainers-modules"]
telemetry-otlp = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]
redis = ["dep:redis"]
i18n = []
# Pluggable file storage backends. Off by default; enabling adds the
# `BlobStore` trait, the `Blob` value type, and a Local backend.
# For S3-compatible storage add `autumn-storage-s3` as a separate
# dependency and call `.with_blob_store(S3BlobStore::from_config(...))`.
# When combined with `db`, opts diesel into `serde_json` so the `Blob`
# value type can round-trip through a Postgres `JSONB` column.
storage = ["diesel?/serde_json"]
# Pluggable error reporting: catch handler panics at the HTTP layer and route
# panics + 5xx responses to configured `ErrorReporter`s. Ships a `tracing`-based
# `LogReporter` as the default. On by default; disable to drop the panic-catch
# layer and the reporting machinery.
reporting = []
mail = ["dep:lettre", "maud"]
# Enables `autumn_web::seed::SeedContext` for use in `src/bin/seed.rs`.
# Depends on `db`; off by default so apps that don't seed pay zero compile cost.
seed = ["db"]
system-info = []
# First-class CSV import and export for `#[repository]` models.
# Adds `autumn_web::data::csv` (streaming export, row-by-row import with
# structured error reporting) and the matching admin-panel routes and
# `autumn data` CLI subcommand.  Off by default so the `csv` crate is
# opt-in.
csv = ["dep:csv"]

[dependencies]
autumn-macros = { version = "0.5.0", path = "../autumn-macros" }
axum.workspace = true
bytes = "1"
http-body = "1"
http-body-util = "0.1"
bcrypt.workspace = true
deadpool = { version = "0.13", default-features = false, features = ["managed", "rt_tokio_1"], optional = true }
diesel = { workspace = true, optional = true }
pq-sys = { workspace = true, optional = true }
diesel-async = { workspace = true, optional = true }
diesel_migrations = { workspace = true, optional = true }
scoped-futures = { version = "0.1.4", optional = true }
tokio-postgres = { version = "0.7", optional = true }
futures.workspace = true
http.workspace = true
indexmap.workspace = true
inventory.workspace = true
libsqlite3-sys = { workspace = true, optional = true }
maud = { workspace = true, optional = true }
moka = { workspace = true, optional = true }
pin-project-lite = "0.2"
serde.workspace = true
serde_json = "1"
thiserror.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true, optional = true }
tokio-util.workspace = true
toml.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
redis = { workspace = true, optional = true }
tokio-cron-scheduler.workspace = true
validator.workspace = true
uuid = { version = "1", features = ["v4"] }
chrono = { workspace = true }
chrono-tz.workspace = true
croner = "3.0.1"
testcontainers = { workspace = true, optional = true }
testcontainers-modules = { workspace = true, optional = true }
serde_urlencoded = "0.7"
serde_yaml = { version = "0.9", optional = true }
pulldown-cmark = { workspace = true, optional = true }
subtle = "2.6.1"
base64 = "0.22"
url = "2.5.8"
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"], optional = true }
jsonwebtoken = { version = "10.1.0", default-features = false, features = ["rust_crypto"] }
lru = "0.18.0"
hmac = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
getrandom = "0.2"
hex = "0.4"
csv = { workspace = true, optional = true }
lettre = { version = "0.11.21", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"], optional = true }

[dev-dependencies]
diesel = { version = "2", features = ["chrono", "postgres"] }
filetime = "0.2"
http.workspace = true
serde_json = "1"
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
tower = { workspace = true, features = ["timeout", "util"] }
trybuild = "1"
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
redis.workspace = true
proptest = "1.4"
time = { workspace = true }
tokio-tungstenite = "0.29.0"
loom = "0.7.2"
temp-env = { version = "0.3.6", features = ["async_closure"] }
rustversion = "1"
rusty-fork = "0.3.1"

# docs.rs feature posture: include all features except those that require
# system libraries unavailable in the docs.rs sandbox.
#   telemetry-otlp — requires protoc (grpc-tonic → tonic → prost-build)
#   test-support   — only meaningful in test binary contexts
[package.metadata.docs.rs]
features = [
  "maud", "htmx", "tailwind", "db", "cache-moka",
  "ws", "flash", "multipart", "http-client", "oauth2", "openapi",
  "redis", "i18n", "storage", "mail", "seed", "system-info", "markdown",
  "reporting", "csv",
]
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "version_history"
harness = false

[[bench]]
name = "attribute_encryption"
harness = false

[[bench]]
name = "inspector"
harness = false

[lints]
workspace = true
